# perpcity-rust-sdk

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  orchestrator.py
.github/workflows/: check.yml  ci.yml  scheduled.yml  test.yml
benches/: hft_bench.rs  math_bench.rs  transport_bench.rs
examples/: hft_bot.rs  market_maker.rs  open_maker.rs  open_position.rs  quickstart.rs  race.rs
src/: client.rs  constants.rs  contracts.rs  convert.rs  errors.rs  events.rs  feed.rs  lib.rs  types.rs
src/client/: mod.rs  queries.rs  trades.rs  transactions.rs
src/errors/: contract.rs  decode.rs  mod.rs  transaction.rs  validation.rs
src/feeds/: block.rs  events.rs  market.rs  mod.rs
src/hft/: gas.rs  latency.rs  mod.rs  nonce.rs  pipeline.rs  position_manager.rs  state_cache.rs
src/math/: liquidity.rs  mod.rs  position.rs  tick.rs
src/transport/: config.rs  health.rs  mod.rs  provider.rs  ws.rs
tests/: anvil_fork.rs  ws_feed.rs
