[package]
name = "perpcity-sdk"
version = "0.2.1"
edition = "2024"
rust-version = "1.85"
description = "Rust SDK for the PerpCity perpetual futures protocol on Base L2"
license = "MIT"
readme = "README.md"
repository = "https://github.com/StrobeLabs/perpcity-rust-sdk"
documentation = "https://docs.rs/perpcity-sdk"
homepage = "https://docs.perp.city"
keywords = ["perpetuals", "defi", "trading", "ethereum", "uniswap"]
categories = ["api-bindings", "cryptography::cryptocurrencies", "finance"]

[dependencies]
alloy = { version = "1", features = ["full", "sol-types", "json-rpc", "rpc-client"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower = "0.5"
tracing = "0.1"
url = "2"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
dotenvy = "0.15"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full", "test-util"] }

[[example]]
name = "quickstart"

[[example]]
name = "open_position"

[[example]]
name = "market_maker"

[[example]]
name = "hft_bot"

[[bench]]
name = "math_bench"
harness = false

[[bench]]
name = "hft_bench"
harness = false

[[bench]]
name = "transport_bench"
harness = false

# ── Release profile: aggressive optimizations for trading hot paths ──
[profile.release]
lto = "fat"           # Cross-crate inlining + dead code elimination
codegen-units = 1     # Single codegen unit for maximum optimization
panic = "abort"       # No unwind tables — saves code size and branch overhead
strip = "symbols"     # Smaller binary

# ── Bench profile inherits release but keeps debug info for profiling ──
[profile.bench]
debug = true          # Needed for samply/flamegraph profiling
